# Raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.sh
.github/workflows/: arcade_workflow.yml  raytracer_workflow.yml
Core/include/raytracer/: ALight.hh  APrimitive.hh  Camera.hh  Canva.hh  Core.hh  ILight.hh  Point3D.hh  PpmCreator.hh  PpmExecption.hh  Ray.hh  RayTracer.hh  raytracer.hh
Core/include/raytracer/classes/: APrimitive.hh  IPrimitive.hh  Point3D.hh  Ray.hh
Core/include/raytracer/config/: ArgsConfig.hh  ConfigFile.hh  Scene.hh
Core/include/raytracer/display/: Clock.hh  Display.hh  Window.hh  Window.hpp
Core/include/raytracer/factory/: AFactory.hh  IFactory.hh  LightFactory.hh  LightFactory.hpp  PrimitiveFactory.hh  PrimitiveFactory.hpp
Core/include/raytracer/math/: APrimitive.hh  IPrimitive.hh  Math.hh  Point3D.hh  Vector3D.hh
Core/src/: ALight.cpp  APrimitive.cpp  Camera.cpp  Canva.cpp  Core.cpp  Point3D.cpp  PpmCreator.cpp  Ray.cpp  Raytracer.cpp  Vector3D.cpp  main.cpp
Core/src/classes/: APrimitive.cpp  Point3D.cpp  Vector3D.cpp
Core/src/config/: ArgsConfig.cpp  ConfigException.cpp  ConfigFile.cpp
Core/src/display/: Clock.cpp  Display.cpp  Window.cpp
Core/src/factory/: AFactory.cpp  LightFactory.cpp  PrimitiveFactory.cpp
Core/src/math/: APrimitive.cpp  Math.cpp  Point3D.cpp  Vector3D.cpp
Lights/: CMakeLists.txt
Lights/AmbiantLight/: CMakeLists.txt
Lights/AmbiantLight/include/: AmbiantLight.hh
Lights/AmbiantLight/src/: AmbiantLight.cpp  EntryPoint.cpp
Lights/DirectionalLight/: CMakeLists.txt
Lights/DirectionalLight/include/: DirectionalLight.hh
Lights/DirectionalLight/src/: DirectionalLight.cpp  EntryPoint.cpp
Lights/PointLight/: CMakeLists.txt
Lights/PointLight/include/: PointLight.hh
Lights/PointLight/src/: EntryPoint.cpp  PointLight.cpp
Primitives/: CMakeLists.txt
Primitives/Cone/: CMakeLists.txt
Primitives/Cone/include/: Cone.hh
Primitives/Cone/src/: Cone.cpp  EntryPoint.cpp
Primitives/Cylinder/: CMakeLists.txt
Primitives/Cylinder/include/: Cylinder.hh
Primitives/Cylinder/src/: Cylinder.cpp  EntryPoint.cpp
Primitives/Limited_Cylinder/: CMakeLists.txt
Primitives/Limited_Cylinder/include/: Limited_Cylinder.hh
Primitives/Limited_Cylinder/src/: EntryPoint.cpp  Limited_Cylinder.cpp
Primitives/Moebius/: CMakeLists.txt
Primitives/Moebius/include/: Moebius.hh
Primitives/Moebius/src/: EntryPoint.cpp  Moebius.cpp
Primitives/Plane/: CMakeLists.txt
Primitives/Plane/include/: Plane.hh
Primitives/Plane/src/: EntryPoint.cpp  Plane.cpp
Primitives/Sphere/: CMakeLists.txt
Primitives/Sphere/include/: Sphere.hh
Primitives/Sphere/src/: EntryPoint.cpp  Sphere.cpp
assets/configs/: only_plan.json  only_sphere.json  sphere_plan.json  test.json  wiggler.json
docs/: Configuration.md  Plugins.md  README.md  Relations.md  Screenshots.md
tests/: CMakeLists.txt
tests/assets/: invalid.json  no_light.json  valid.json
tests/src/Core/config/: testsArgsConfig.cpp  testsConfigFile.cpp
tests/src/Core/factory/: testsLightFactory.cpp  testsPrimitiveFactory.cpp
